[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/main.gd" type="Script" id=1]
[ext_resource path="res://Scripts/PixelShader.tres" type="Material" id=2]
[ext_resource path="res://Sprites/room1.png" type="Texture" id=3]
[ext_resource path="res://Scenes/map.gd" type="Script" id=4]
[ext_resource path="res://Sprites/player.png" type="Texture" id=5]
[ext_resource path="res://Scenes/player.gd" type="Script" id=6]
[ext_resource path="res://Sprites/slime.png" type="Texture" id=7]
[ext_resource path="res://Scenes/slime.gd" type="Script" id=8]
[ext_resource path="res://Scenes/MatchMap/matchControl.tscn" type="PackedScene" id=9]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 453.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.8

[node name="map_control" type="Control" parent="VBoxContainer/Control2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -288.0
margin_top = -224.0
margin_right = 288.0
margin_bottom = 224.0

[node name="map" type="Sprite" parent="VBoxContainer/Control2/map_control"]
material = ExtResource( 2 )
scale = Vector2( 4, 4 )
texture = ExtResource( 3 )
centered = false
script = ExtResource( 4 )

[node name="player" type="Sprite" parent="VBoxContainer/Control2/map_control/map"]
use_parent_material = true
position = Vector2( 24, 88 )
texture = ExtResource( 5 )
script = ExtResource( 6 )

[node name="slime" type="Sprite" parent="VBoxContainer/Control2/map_control/map"]
use_parent_material = true
position = Vector2( 120, 88.125 )
texture = ExtResource( 7 )
script = ExtResource( 8 )

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 457.0
margin_right = 600.0
margin_bottom = 1024.0
size_flags_vertical = 3

[node name="matchControl" parent="VBoxContainer/Control" instance=ExtResource( 9 )]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -376.0
margin_top = -184.5
margin_right = -16.0
margin_bottom = 175.5
